fix about-map breaking style on mobile

--- a/assets/css/theme_home.css
+++ b/assets/css/theme_home.css
@@ -1460,6 +1460,9 @@
     transform: translateX(-9rem);
   }
 
+  .about__img{
+    height: 600px;
+  }
 
   .portfolio__img-div{
     width: 450px;
